--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 
       	                        <!-- <a class="nav-link" href="blog.html">BLOG</a></li>
                                <li class="nav-item" href="#"> -->
-      	                        <a class="nav-link" href="contact.html">QUIZ</a></li>
+      	                        <a class="nav-link" href="quiz.html">QUIZ</a></li>
                                <!-- <li class="last"><a href="#"><img src="images/search-icon.png" alt="icon"></a></li> -->
                             </ul>
                         </div>
