--- a/conclusion.html
+++ b/conclusion.html
@@ -78,42 +78,14 @@
             <div class="col-md-12" >
                 <div class="written_text">
                     <!-- <div class="like_icon"><img src="images/like-icon.png"></div> -->
-                    <h1 class="written_text">Vehicle Tracking</h1>
+                    <h1 class="written_text">The Future & Conclusions </h1>
                     <p>
-                        We need to track vehicles to understand the accidents possibility. Among all the objects detected, we retain only the correctly detected vehicles. This can be achieved by evaluating the class ids and scores from the previous step. Post identifying the vehicles in video frames, we use Centroid Tracking algorithm to track the vehicles in each subsequent video frames.
-                    <br><br>
-                    Centroid Tracking algorithm is based on Euclidean distance between centroids of two objects, which is our system are vehicles.
-                    <br><br>
-                    1.  The Centroid is determined by identifying the intersection point of the lines passing from midpoint of the boundary box that was generated in Step 1.
-                    <br>
-                    2.	 Next the Euclidean distance is calculated between vehicles in the frames.
-                    <br>
-                    3.	 This process is repeated for each frame and shortest distance is identified. 
-                    <br>
-                    4.	 Incase previously identified vehicles are no longer in the frame, then remove the from the set and if there are new vehicles in the frame, then add them to our object set.
-                    <br><br>
-                    This distance between two objects will be used to predict the accidents between those two vehicles. This prediction depends on:
-                    <br>
-                    1.	Overlapping bounding boxes of vehicles: Before any collision between two vehicles, there are high chances that their bounding boxes will overlap. This can give some probability but doesn’t confirm that it is a collision as every overlap need not be a collision.
-                    <br>“Consider a, b to be the bounding boxes of two vehicles A and B. Let x, y be the coordinates of the centroid of a given vehicle and let α, β be the width and height of the bounding box of a vehicle respectively. At any given instance, the bounding boxes of A and B overlap, if the condition shown in Eq. 1 holds true”. 
-                    <br>
-                    <img src="images/eq1.png" alt="src:" width="600" height="50">
-                    <br>
-                    2.	Trajectory of the vehicles and their angle of intersection: This is determined by measuring the difference between the centroid of the vehicles in each video frame which generates a 2D vector.
-                    “ We then determine the magnitude of the vector, µ, as shown in Eq. 2.”
-                    <br>
-                    <img src="images/eq2.png" alt="src:" width="600" height="50">
-                    <br>
-                    The angle of intersection for two vectors μ_1 and μ_2 of two vehicles using Eq. 3
-                    <br>
-                    <img src="images/eq3.png" alt="src:" width="600" height="50">
-                    <br> 
-                    3.	Change in speed of the vehicles: We calculate the speed of the vehicles using Eq. 4
-                    <br>
-                    <img src="images/eq4.png" alt="src:" width="600" height="50">
-                    <br> 
-                    where c2 and c1 are centroids of the vehicles in subsequent frames and the Interval is the time.
-                    <br> 
+                        •	Today we are moving towards full self-driving vehicles. The accident detection can be used to feed the input to self-driving vehicles to make better decisions on choosing best path to travel to reach destination.
+                        <br><br>
+                        •	This can be very useful under situation where no user is available to report the accident, the surveillance camera input can be used to make automatic call for emergency.
+                        <br><br>
+                        •	Other benefit is clearing the traffic on that route can help the emergency reach the spot sooner which could be lifesaving.
+
                     </p>
                     <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, </p> -->
                 </div>
