--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
                  <div class="menu-area">
                     <nav class="navbar navbar-expand-lg ">
                         <!-- <a class="navbar-brand" href="#">Menu</a> -->
-<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!-- <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                        <i class="fa fa-bars"></i>
-                        </button>
+                        </button> -->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
                                <li class="nav-item active">
@@ -61,6 +61,36 @@
                                <li class="nav-item" href="#"> -->
       	                        <a class="nav-link" href="quiz.html">QUIZ</a></li>
                                <!-- <li class="last"><a href="#"><img src="images/search-icon.png" alt="icon"></a></li> -->
+                            
+                            
+                                <li class="nav-item">
+                                <a class="nav-link" href="Introduction.html">Introduction</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="sensor.html">Sensor</a>
+                                </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="related.html">Related Work</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="vehicle_detection.html">Vehicle Detection</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="vehicle_tracking.html">Vehicle Tracking</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="accident_detection.html">Accident Detection</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="success_failure.html">Success & Failures</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="challenges.html">Challenges</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                </li>
+
+
                             </ul>
                         </div>
                     </nav>
@@ -95,15 +125,7 @@
     <br>
 </div>
 
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                   <p class="copyright_text">© 2019 All Rights Reserved. <a href="https://html.design">Free Website Templates</a></p>
-                </div>
-            </div>
-        </div>
-    </div> 
+ 
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
