--- a/conclusion.html
+++ b/conclusion.html
@@ -46,9 +46,9 @@
                  <div class="menu-area">
                     <nav class="navbar navbar-expand-lg ">
                         <!-- <a class="navbar-brand" href="#">Menu</a> -->
-<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!-- <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                        <i class="fa fa-bars"></i>
-                        </button>
+                        </button> -->
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
                                <li class="nav-item active">
@@ -61,6 +61,36 @@
                                <li class="nav-item" href="#"> -->
       	                        <a class="nav-link" href="quiz.html">QUIZ</a></li>
                                <!-- <li class="last"><a href="#"><img src="images/search-icon.png" alt="icon"></a></li> -->
+                            
+                            
+                                <li class="nav-item">
+                                <a class="nav-link" href="Introduction.html">Introduction</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="sensor.html">Sensor</a>
+                                </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="related.html">Related Work</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="vehicle_detection.html">Vehicle Detection</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="vehicle_tracking.html">Vehicle Tracking</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="accident_detection.html">Accident Detection</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="success_failure.html">Success & Failures</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="challenges.html">Challenges</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                </li>
+
+
                             </ul>
                         </div>
                     </nav>
@@ -83,8 +113,10 @@
                         •	Today we are moving towards full self-driving vehicles. The accident detection can be used to feed the input to self-driving vehicles to make better decisions on choosing best path to travel to reach destination.
                         <br><br>
                         •	This can be very useful under situation where no user is available to report the accident, the surveillance camera input can be used to make automatic call for emergency.
+                        Clearing the traffic on that route can help the emergency reach the spot sooner which could be lifesaving.
                         <br><br>
-                        •	Other benefit is clearing the traffic on that route can help the emergency reach the spot sooner which could be lifesaving.
+                        There as many challenges to computer vision in autonomous vehicles. Many companies have been very dependent on LiDarR. But Computer vision for automous systems is emerging technology.
+                        Many big companies are encouraging Computer vision. So we can expect better solutions to come in the future.
 
                     </p>
                     <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, </p> -->
@@ -100,15 +132,7 @@
     <br>
 </div>
 
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                   <p class="copyright_text">© 2019 All Rights Reserved. <a href="https://html.design">Free Website Templates</a></p>
-                </div>
-            </div>
-        </div>
-    </div> 
+   
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
