--- a/related.html
+++ b/related.html
@@ -108,26 +108,21 @@
             <div class="col-md-12" >
                 <div class="written_text">
                     <!-- <div class="like_icon"><img src="images/like-icon.png"></div> -->
-                    <h1 class="written_text">Accident Detection</h1>
+                    <h1 class="written_text">Related Work</h1>
                     <p>
-                        In previous step of vehicle tracking, the accident prediction is made. Two vehicles have overlapping bounding box, doesnt mean they were part of the accident. They might just be parked that close or many other reason.
-                        <br>
-                        <br>
-                        <figure>
-                            <img src="images/car3.jpg" class="rounded " alt="..." style="width: 300px; height:300px ">
-                        
-                            <figcaption>Fig.9.</a> </figcaption>
-                          </figure>
-                          <br>
-                        <br>To avoid such false accident alarms, multiple parameters need to be considered.  Hence in <a href="index.html#references">[1]</a> authors has suggested to consider additional variable to eliminate false alarms.
+                        Researchers have been very keen on exploring accident detection using computer vision for a couple of decades now. And many solutions have been proposed to tackle this problem. 
                         <br><br>
-                        <b>Acceleration (α)</b>: Change in speed is measured to detect collision from predefined conditions. We need to determine average change in speed for 15 frames before overlapping.
+                        Recently apple has developed crash detection system, that can detect car crash based on force during a crash. "Apple said it developed two new motion sensors for Apple Watch Series 8: An improved 3-axis gyroscope and a high g-force accelerometer. These can detect up to 256g force, which Apple said allows it to detect the extreme impact of a crash. These sensors can sample motion up to 4x faster than their predecessors, so Apple Watch Series 8 can sense the precise moment of impact. Apple also built an advanced "sensor fusion" algorithm to enable accurate crash detection. The company studied, for years, vehicle impacts at state-of-the-art crash test labs."<a href="https://www.pocket-lint.com/phones/news/apple/162587-apple-crash-detection-how-does-it-work-iphone-apple-watch-how-to-turn-on">: Source.</a> 
                         <br><br>
-                        <b>Trajectory(β)</b>: Trajectory anomaly is measured from the angle of trajectories of the vehicles. This is determined by, if θ ∈(θ_L,θ_H ) predetermined set of conditions of θ
-                        <br><br>
-                        <b>Change in Angle (δ)</b>: Measure the angle of the vehicle with its own trajectories in five frames. During accidents, there are chances of the vehicle changing its alignment with respect to its previous trajectory. So, Change is angle can be used to eliminate false positives of the detection. The change in angle is determined from predefined set of conditions.
-                        <br><br>
-                        All the three individual thresholds are used to generate a score between 0 and 1. It the score is greater than 0.5, then it is an accident and rest is discarded.
+                        In this article we will discuss one solution proposed by Chand et al in [1].
+<br>To detect an accident between two cars, we need to consider various parameters as what may look like an accident may not necessarily be an accident and could just be some False positives. Hence the solution to this problem can be broadly classified into 3 steps.
+<br>
+<br>Step 1: Detect Vehicles
+<br>Step 2: Monitor the vehicle and extract features
+<br>Step 3: Detect Accidents
+
+<br><br>Let us have a look at how these steps could be implemented for our problem in next topics.
+
                     </p>
                     <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, </p> -->
                 </div>
@@ -135,8 +130,6 @@
 
         </div>
     </div>
-    <a href="#" class="previous">&laquo; Previous</a>
-    <a href="#" class="next">Next &raquo;</a>
     <br>
     <br>
     <br>
@@ -144,7 +137,7 @@
     <br>
 </div>
 
-    
+   
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
