--- a/index.html
+++ b/index.html
@@ -190,19 +190,28 @@
         <p style="color: #050000">
             [1] Dhananjai Chand, Savyasachi Gupta, Goutham K, “Computer Vision-based Accident Detection in Traffic Surveillance”, 10th ICCCNT, 2019. 
             <a class = "external" style="color: #1770cf" href="https://ieeexplore.ieee.org/document/8944469">IEEE Xplore <i class="fa fa-external-link"></i></a>
+            <br>Synopsis: This journal proposes Mask R-CNN and accident annomalies for vehicle accident detection.
+            <br>Reliability: The authors are computer science students of National Institute of Technology India, which is a reputed college. This paper was completed in supervision of their professor Earnest Paul Ijjina who is a well known professor for her research in Computer Vision. 
             <br><br>
             [2] Z. Hui, X. Yaohua, M. Lu, and F. Jiansheng, “Vision-based real-time traffic accident detection,” in Proc. of World Congress on Intelligent Control and Automation, June 2014. 
             <a class = "external" style="color: #1770cf" href="https://ieeexplore.ieee.org/document/7052859">IEEE Xplore <i class="fa fa-external-link"></i></a>
+            <br>Synopsis: This journal discusses accident detection with Gaussian Mixture Model for object detection.
+            <br>Reliability: The authors are from China Merchants Chongqing Communications Research & Design Institute Co., Ltd, China and have published multiple IEEE papers on road accidents and road safety.
             <br><br>
             [3] Vaishnavi Ravindran, Lavanya Viswanathan, Dr. Shanta Rangaswamy, “A Novel Approach to Automatic Road-Accident Detection using Machine Vision Techniques”, International Journal of Advanced Computer Science and Applications, 2016.
             <a class = "external" style="color: #1770cf" href="https://pdfs.semanticscholar.org/abf3/ff1dbf66f2d9dd2737650869c5537cfcd0fb.pdf?_ga=2.172199776.2141503375.1662409880-1411934195.1662409880">Semantic Scholar <i class="fa fa-external-link"></i></a>
+            <br>Synopsis: This journal discusses road accident detection using damaged vehicle footage.
+            <br>Reliability: The authors of this journal are students from R.V. College of Engineering, Bangalore, India which is a reputed college known for it's reserach and innovation.
             <br><br>
             [4] Elisha Odemakinde, “Everything about Mask R-CNN: A Begineer's Guide”.
             <a class = "external" style="color: #1770cf" href="https://viso.ai/deep-learning/mask-r-cnn/">Visio.ai <i class="fa fa-external-link"></i></a>
+            <br>Synopsis: This is a article on introduction to Mask R-CNN.
+            <br>Reliability: Elisha Odemakinde is a machine learning engineer and researcher and has published many articles on Visio ai.
             <br><br>
-            [5] Kaiming He, Georgia Gkioxari, Piotr Dollar ,Ross Girshick, "Mask R-CNN", Facebook AI Research.
+            [5] Kaiming He, Georgia Gkioxari, Piotr Dollar ,Ross Girshick, "Mask R-CNN", 2017 IEEE International Conference on Computer Vision.
             <a class = "external" style="color: #1770cf" href="https://scontent-sjc3-1.xx.fbcdn.net/v/t39.8562-6/240856874_571530530542891_4231366922854549654_n.pdf?_nc_cat=102&ccb=1-7&_nc_sid=ad8a9d&_nc_ohc=8rjtjsM51tUAX83KbMe&_nc_ht=scontent-sjc3-1.xx&oh=00_AT8q0aN5Z9w6ezyOggU4HsbhdQB7JGUemrZqi2qvJkrC2A&oe=633AD975"> <i class="fa fa-external-link"></i></a>
-            
+            <br>Synopsis: This is a journal article, introduces concept of Mask R-CNN and it's arhcitecture.
+            <br>Reliability: The authors are from Facebook (Meta) AI Research, they are well known for their reasearch in AI.
             <br><br>
         </p>
         </div>
