--- a/Introduction.html
+++ b/Introduction.html
@@ -87,8 +87,12 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#references">References</a>
+                                </li>
+
 
 
                             </ul>
@@ -115,7 +119,7 @@
                         <br>
                         <figure style="align-items:center">
                             <img src="./images/csr2.jpg" class="rounded mx-auto d-block" alt="..." style="width: 600px; height:400px ">
-                            <figcaption style="color: white; text-align: center;">Fig.2.</figcaption>
+                            <figcaption style="color: white; text-align: center;">Fig.2. Note. Adapted  from open source pexels.com.</figcaption>
                           </figure>
                         
                         <br>In this discussion, we will have a look at road accidents caused between two cars and how they can be detected using computer vision.
