--- a/accident_detection.html
+++ b/accident_detection.html
@@ -87,7 +87,10 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#references">References</a>
                                 </li>
 
 
@@ -116,7 +119,7 @@
                         <figure>
                             <img src="images/car3.jpg" class="rounded " alt="..." style="width: 300px; height:300px ">
                         
-                            <figcaption>Fig.9.</a> </figcaption>
+                            <figcaption>Fig.9. Note. Adapted from open source pexel.com </figcaption>
                           </figure>
                           <br>
                         <br>To avoid such false accident alarms, multiple parameters need to be considered.  Hence in <a href="index.html#references">[1]</a> authors has suggested to consider additional variable to eliminate false alarms.
