--- a/conclusion.html
+++ b/conclusion.html
@@ -63,7 +63,7 @@
                                <!-- <li class="last"><a href="#"><img src="images/search-icon.png" alt="icon"></a></li> -->
                             
                             
-                                <li class="nav-item">
+                                <li class="nav-item" >
                                 <a class="nav-link" href="Introduction.html">Introduction</a></li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="sensor.html">Sensor</a>
@@ -87,7 +87,10 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#references">References</a>
                                 </li>
 
 
