--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#references">References</a>
                                 </li>
 
 
@@ -141,7 +144,7 @@
                     <br>
                     <figure style="align-items:center">
                         <img src="./images/car1.jpg" class="rounded mx-auto d-block" alt="..." style="width: 600px; height:400px ">
-                        <figcaption style="color: black; text-align: center;">Fig.1.</figcaption>
+                        <figcaption style="color: black; text-align: center;">Fig.1. Note. Adapted  from open source pexels.com.</figcaption>
                       </figure>
                     
                 </p>
