--- a/vehicle_tracking.html
+++ b/vehicle_tracking.html
@@ -87,7 +87,10 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#references">References</a>
                                 </li>
 
 
@@ -118,7 +121,7 @@
                     <figure>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/3d-function-5.svg/200px-3d-function-5.svg.png" class="rounded " alt="..." style="width: 300px; height:300px ">
                     
-                        <figcaption>Fig.8. Src:<a href="https://en.wikipedia.org/wiki/Euclidean_distance">Wikipedia</a> </figcaption>
+                        <figcaption>Fig.8. Note. Adapted  from <a href="https://en.wikipedia.org/wiki/Euclidean_distance">Wikipedia</a> </figcaption>
                       </figure>
                     <br><br>
                     1.  The Centroid is determined by identifying the intersection point of the lines passing from midpoint of the boundary box that was generated in Step 1.
