--- a/quiz.html
+++ b/quiz.html
@@ -87,8 +87,12 @@
                                     <a class="nav-link" href="challenges.html">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="conclusion.html">Future & Conclusion</a>
+                                    <a class="nav-link" href="conclusion.html">Future</a>
                                 </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="index.html#references">References</a>
+                              </li>
+
 
 
                             </ul>
