--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
     		    		<div class="row">
     		    			<div class="col-md-12" >
     		    				<div class="written_text">
+
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=FjlBwQaCKb8" allowfullscreen></iframe>
+                                    </div>
     		    					
     		    					<!-- <h1 class="written_text">Introduction and Problem Definition: </h1> -->
     		    					
