--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     		    				<div class="written_text">
 
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=FjlBwQaCKb8" allowfullscreen></iframe>
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed?v=FjlBwQaCKb8" allowfullscreen></iframe>
                                     </div>
     		    					
     		    					<!-- <h1 class="written_text">Introduction and Problem Definition: </h1> -->
