button for Next on all pages

--- a/accident_detection.html
+++ b/accident_detection.html
@@ -138,8 +138,17 @@
 
         </div>
     </div>
-    <a href="#" class="previous">&laquo; Previous</a>
-    <a href="#" class="next">Next &raquo;</a>
+    <br>
+    <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="success_failure.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
     <br>
     <br>
     <br>
