--- a/related.html
+++ b/related.html
@@ -143,6 +143,17 @@
     </div>
     <br>
     <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="vehicle_detection.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
