--- a/vehicle_tracking.html
+++ b/vehicle_tracking.html
@@ -126,6 +126,8 @@
                     <br><br>
                     1.  The Centroid is determined by identifying the intersection point of the lines passing from midpoint of the boundary box that was generated in Step 1.
                     <br>
+                    <img src="images/boxes.jpeg" alt="src:" width="600" height="400">
+                    <br><br>
                     2.	 Next the Euclidean distance is calculated between vehicles in the frames.
                     <br>
                     3.	 This process is repeated for each frame and shortest distance is identified. 
@@ -161,6 +163,17 @@
             </div>
 
         </div>
+    </div>
+    <br>
+    <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="accident_detection.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
     </div>
     <br>
     <br>
