--- a/challenges.html
+++ b/challenges.html
@@ -127,6 +127,17 @@
     </div>
     <br>
     <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="conclusion.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
