--- a/sensor.html
+++ b/sensor.html
@@ -135,6 +135,17 @@
     </div>
     <br>
     <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="related.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
