--- a/success_failure.html
+++ b/success_failure.html
@@ -131,6 +131,17 @@
     </div>
     <br>
     <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="challenges.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
