--- a/vehicle_detection.html
+++ b/vehicle_detection.html
@@ -179,6 +179,17 @@ RoIAlign: Extraction of a small feature map from Region of Interest. Quantizatio
     </div>
     <br>
     <br>
+    <div class="row" style="justify-content: center;  
+    align-items: center;  ">
+    <form action="vehicle_tracking.html">
+        <button type="submit" class="btn btn-dark btn-lg"  >Next</button>
+
+    </form>
+        
+
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
