--- a/accident_detection.html
+++ b/accident_detection.html
@@ -131,6 +131,11 @@
                         <b>Change in Angle (δ)</b>: Measure the angle of the vehicle with its own trajectories in five frames. During accidents, there are chances of the vehicle changing its alignment with respect to its previous trajectory. So, Change is angle can be used to eliminate false positives of the detection. The change in angle is determined from predefined set of conditions.
                         <br><br>
                         All the three individual thresholds are used to generate a score between 0 and 1. It the score is greater than 0.5, then it is an accident and rest is discarded.
+
+                        <!-- <br><br>
+                        <b>Result</b> -->
+
+                        
                     </p>
                     <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, </p> -->
                 </div>
