--- a/success_failure.html
+++ b/success_failure.html
@@ -113,6 +113,18 @@
                     <!-- <div class="like_icon"><img src="images/like-icon.png"></div> -->
                     <h1 class="written_text">Success & Failure</h1>
                     <p>
+                        This work is evaluated on vehicular collision footage from different geographical regions, compiled from YouTube.
+
+                        <br>
+                     To evaluate the performance of the system author uses below mentioned equations in <a href="index.html#references">[1]</a> .
+                        <figure>
+                            <img src="images/Picture1.png" class="rounded " alt="..." style="width: 500px; height:300px ">
+                        
+                            <figcaption>Fig.10. Detection Ratio and False Alarm Rate </figcaption>
+                          </figure>
+                          The proposed framework achieved a detection rate of 71% calculated using Eq. 8 and a false alarm rate of 0.53% calculated using Eq. 9. 
+                          <br>The efficacy of the proposed approach is due to consideration of the diverse factors that could result in a collision.
+                          <br><br>
                         In <a href="index.html#references">[2]</a> the authors have suggested Gaussian Mixture Model to detect vehicles and Mean shift algorithm to track them. But this model suffers in severe weather conditions or erratic traffic patterns. 
                         <br><br>In current method proposed in <a href="index.html#references">[1]</a> on multiple parameters of acceleration, trajectory, change in angle, are used, which has better chances of success.
                         <figure>
